@@ -132,14 +132,8 @@
           <excludedGroups>${excluded.groups}</excludedGroups>
 
           <argLine>
-            --add-exports=java.desktop/sun.awt=ALL-UNNAMED
-            --add-opens=java.base/java.io=ALL-UNNAMED
-            --add-opens=java.base/java.lang=ALL-UNNAMED
-            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-            --add-opens=java.base/java.security=ALL-UNNAMED
-            --add-opens=java.base/java.util=ALL-UNNAMED
-            --add-opens=java.management/javax.management=ALL-UNNAMED
-            --add-opens=java.naming/javax.naming=ALL-UNNAMED
+            ${addjdkexports}
+            ${addjdkopens}
           </argLine>
           <properties>
           </properties>
